# info-sales-mysql-api

./: .env  .env.example  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
config/: bd.yaml  db.yaml  logging.yaml  paths.yaml
images/: response_1784729649227.json
src/info_sales_mysql_api/: main.py
src/info_sales_mysql_api/api/dependencies/: api_key.py
src/info_sales_mysql_api/api/routes/: summary_router.py
src/info_sales_mysql_api/api/schema/: schema_summary.py
src/info_sales_mysql_api/cleanning/: data_clean.py
src/info_sales_mysql_api/database/connection/: get_connection.py
src/info_sales_mysql_api/database/query/: load_sales.py
src/info_sales_mysql_api/pipeline/: pipeline_service.py
src/info_sales_mysql_api/standardization/: get_standardization.py
src/info_sales_mysql_api/summary/: get_summary.py
src/info_sales_mysql_api/utils/config_env/: Settings.py
src/info_sales_mysql_api/utils/load_yaml/: loader_yaml.py
src/info_sales_mysql_api/utils/loggers/: logger.py
src/info_sales_mysql_api/utils/retry/: load_retry.py
tests/: test_api_key.py  test_data_clean.py  test_get_engine.py  test_get_load_sales.py  test_get_summary.py  test_load_all_configs.py  test_load_retry.py  test_main.py  test_retry_connect.py  test_run_pipeline.py  test_schema_summary.py  test_settings.py  test_setup_logger.py  test_standardization_sales_data.py  test_summary_router.py  teste_api_key.py
