[project]
name = "info-sales-mysql-api"
version = "0.1.0"
description = ""
authors = [
    {name = "jcarlossc",email = "jcarlossc1977@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "pymysql (>=1.2.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "info_sales_mysql_api", from = "src"}]

[tool.poetry.scripts]
info_sales = "info_sales_mysql_api.main:main"

[tool.mypy]
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "types-pyyaml (>=6.0.12.20260518,<7.0.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]

[tool.taskipy.tasks]
run_app = "poetry run info_sales"
run_pytest = "poetry run pytest ."
run_covhtml = "poetry run pytest --cov=test_senior --cov-report=html"
run_covcmd = "poetry run pytest --cov=test_senior --cov-report=term-missing"
run_format = "poetry run ruff format ."
run_lint = "ruff check ."
run_mypy = "poetry run mypy ."
run_check = "poetry run ruff format --check ."
run_precommit = "poetry run pre-commit run --all-files"
